Agregado de imagen en mi archivo index
Se agrego la imagen de un perrito

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
         <h1>Hola esta es mi primer pagina</h1>
         <h2>Subtitulo de la pagina con etiqueta h2</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe impedit animi a, laudantium neque odit odio repudiandae rerum sed minus quis, officia incidunt alias adipisci consequuntur. Quis in cupiditate nostrum!</p>
+        <img src="https://t1.ea.ltmcdn.com/es/posts/6/5/5/_23556_3_600.jpg" alt="perrito chiquito con un oso al lado">
     </body>
 </html>
