--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
-<html>
-    <head>
-        <title>Mi primer archivo</title>
-    </head>
-    <body>
-        <h1>Hola esta es mi primer pagina</h1>
-        <h2>Subtitulo de la pagina con etiqueta h2</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe impedit animi a, laudantium neque odit odio repudiandae rerum sed minus quis, officia incidunt alias adipisci consequuntur. Quis in cupiditate nostrum!</p>
-        <img src="https://t1.ea.ltmcdn.com/es/posts/6/5/5/_23556_3_600.jpg" alt="perrito chiquito con un oso al lado">
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi pagina de prueba</title>
+    <link rel="stylesheet" href="./css/estilos.css">
+</head>
+<body>
+    <header>
+        <!-- Contenido del header -->
+    </header>
+    <main>
+        <a class="claseDos" href="./Apartados/apartado.html">Apartado.html</a>
+
+        <p class="claseUno claseDos">Hola me llamo manuel</p>
+
+        <img class="tamanioImagen" src="./imagenes/deadpool.jpg" alt="Imagen deadpool">
+
+        <!-- Formulario de inscripcion alumno -->
+        <form>
+            <select>
+                <option value="" hidden>Seleccione una opcion</option>
+                <option value="Argentina">Argentina</option>
+                <option value="Brasil">Brasil</option>
+                <option value="Chile">Chile</option>
+                <option value="Paraguay">Paraguay</option>
+                <option value="Uruguay">Uruguay</option>
+            </select>
+            <p> Soy una etiquerta dentro del form</p>
+        </form>
+    </main>
+    <footer>
+        <!-- Contenido del footer -->
+    </footer>
+</body>
 </html>
